--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#Setting service working port
+server.port = 8020
 
+#Eureka register
+eureka.client.serviceUrl.defaultZone= http://localhost:8001/eureka/
+
+#MongoDB 
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database = consultdb
+
+#For /Refresh endpoint to update changes in properties
+management.endpoints.web.exposure.include=*
+
+#Application name for properties fetching.
+spring.application.name = consultservice
