final update - docker (working)

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>ConsultServiceJar</finalName>
 	</build>
 
 </project>
